--- a/src/styles/tech.css
+++ b/src/styles/tech.css
@@ -3,6 +3,6 @@
     color: white;
     background-color: black;
     border-radius: 7px;
-    margin: 5px;
-    padding: 7px;
+    margin-left: 50px;
+    padding: 5px;
 }
