some changes made

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -18,6 +18,7 @@
 }
 
 .project-center {
+    margin-bottom: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +33,7 @@
 }
 
 .text-padding {
-    padding-left: 50px;
+    padding-left: 15px;
     padding-top: 20px;
 }
 
