--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -1,20 +1,10 @@
 .project {
     /* font-size: 50px; */
     background: rgb(245, 245, 247);
-    border-radius: 15px;
+    border-radius: 20px;
     border-style: solid;
     border-width: 0.5px;
     border-color: rgb(210, 210, 213);
-}
-
-.anim {
-    transform: scale(1);
-    transition: transform 0.5s ease;
-}
-
-/* Animation state */
-.anim.scroll-animate {
-    transform: scale(1.2); /* Increase size by 20% */
 }
 
 .project-center {
@@ -41,4 +31,8 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+}
+
+section {
+    margin-bottom: 200px;
 }
