--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -37,6 +37,26 @@ section {
     margin-bottom: 200px;
 }
 
+.section2 {
+    margin-bottom: 20px;
+}
+
+.section3 {
+    margin-bottom: 100px;
+}
+
+.title {
+    text-align: center;
+    font-family: "Inter", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    padding-bottom: 40px;
+}
+
+.nav-space {
+    margin-top: 15px;
+}
+
 html {
     scroll-behavior: smooth;
   }
