--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -38,13 +38,15 @@
 .contact-line {
     border: 1px solid black;
     width: 97%;
-    margin-top: 25px;
+    margin-top: 35px;
+    margin-bottom: 10px;
 }
 
 .send-contact {
     display: flex;
     align-items: center;
     margin-right: 20px;
+    align-items: flex-end;
 }
 
 .contact-connect {
@@ -60,11 +62,12 @@
 .contact-email {
     display: flex;
     flex-direction: row;
-    padding-left: 20px;
+    padding-left: 40px;
+    align-items: center;
 }
 
 .email-padding {
-    padding-left: 10px;
+    padding-left: 30px;
 }
 
 .explore-padding {
@@ -80,4 +83,25 @@
 
 .info-padding {
     padding-right: 10px;
+}
+
+.h2-contact {
+    font-size: 36px;
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    color: gray;
+    margin-bottom: 0;
+}
+
+.h1-contact {
+    font-size: 54px;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.font-medium {
+    font-size: 20px;
+    font-weight: 500;
 }
