--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -1,11 +1,10 @@
-.project {
-    /* font-size: 50px; */
+/* .project {
     background: rgb(245, 245, 247);
     border-radius: 20px;
     border-style: solid;
     border-width: 0.5px;
     border-color: rgb(210, 210, 213);
-}
+} */
 
 .project-center {
     margin-bottom: 25px;
@@ -31,6 +30,11 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    background: rgb(245, 245, 247);
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: rgb(210, 210, 213);
 }
 
 section {
