--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -1,11 +1,3 @@
-/* .project {
-    background: rgb(245, 245, 247);
-    border-radius: 20px;
-    border-style: solid;
-    border-width: 0.5px;
-    border-color: rgb(210, 210, 213);
-} */
-
 .project-center {
     margin-bottom: 25px;
     display: flex;
@@ -35,6 +27,9 @@
     border-style: solid;
     border-width: 0.5px;
     border-color: rgb(210, 210, 213);
+    transition: transform 0.1s ease-out;
+    transform-origin: center;
+    transform: scale(0.5); /* Start smaller */
 }
 
 section {
