--- a/src/styles/skill.css
+++ b/src/styles/skill.css
@@ -9,6 +9,11 @@
     border-style: solid;
     border-width: 3px;
     border-color: gray;
+    transition: transform 0.3s ease;
+}
+
+.skill-box:hover {
+    transform: translateY(-10px);
 }
 
 .skill-pos {
