--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -5,6 +5,10 @@
     align-items: center;
 }
 
+.project {
+    width: 75%;
+}
+
 .right {
     display: flex;
 }
@@ -58,4 +62,14 @@ section {
 
 html {
     scroll-behavior: smooth;
+  }
+
+  @media only screen and (max-width: 780px) {
+    .image-padding img {
+        width: 300px;
+        height: 300px;
+    }
+    .project {
+        width: 100%;
+    }
   }
