--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,5 +1,7 @@
+
+
 .image {
-    border-radius: 50%;
+    height: 350px;
 }
 
 .position {
@@ -24,4 +26,22 @@
 .position p {
     font-size: 25px;
     font-family: "Inter", sans-serif;
+}
+
+@media only screen and (max-width: 780px) {
+    .position {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .para-position {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding-top: 25px;
+    }
+
+    .position p {
+        font-size: 18px;
+    }
 }
