--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,6 +1,5 @@
 .contact-bg {
     width: 75%;
-    height: 300px;
     background: rgb(245, 245, 247);
     border-radius: 20px;
     border-style: solid;
@@ -104,4 +103,21 @@
 .font-medium {
     font-size: 20px;
     font-weight: 500;
+}
+
+@media only screen and (max-width: 780px) {
+    .contact-bg {
+        width: 100%;
+    }
+
+    .contact-message-row {
+        flex-direction: column;
+    }
+    .send-contact p {
+        width: 100%;
+        font-size: 20px;
+    }
+    .send-message-box {
+        justify-content: center;
+    }
 }
