--- a/src/styles/skill.css
+++ b/src/styles/skill.css
@@ -23,6 +23,7 @@
 .skill-center {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .text-pos {
@@ -30,4 +31,11 @@
     flex-direction: column;
     align-items: center;
     margin-right: 10px;
+}
+
+@media only screen and (max-width: 780px) {
+    .skill-center {
+        width: 100%;
+        flex-wrap: wrap;
+    }
 }
