--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -22,6 +22,11 @@
     padding-top: 20px;
 }
 
+.text-padding p {
+    width: 80%;
+    font-family: "Inter", sans-serif;
+}
+
 .container {
     display: flex;
     justify-content: space-between;
@@ -70,6 +75,9 @@ html {
         height: 300px;
     }
     .project {
-        width: 100%;
+        width: 90%;
+    }
+    .container {
+        flex-direction: column;
     }
   }
